load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "opt_crash_fuzzer",
    srcs = ["fuzz_targets/opt_crash_fuzzer.cpp"],
    deps = [
        "@com_google_fuzztest//fuzztest",
        "@com_google_fuzztest//fuzztest:fuzztest_gtest_main",
        "@llvm-project//llvm:BitReader",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:IRReader",
        "@llvm-project//llvm:Passes",
        "@llvm-project//llvm:Support",
        "@llvm-project//llvm:Analysis",
        "@llvm-project//llvm:TransformUtils",
    ],
)